syntax = "proto3";

package pii;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Pii.API.Protos";

// =========================
// ========== API ==========
// =========================

service PiiService {
  //Tra cứu user_id từ alias_id (UUID string)
  rpc ResolveUserId (ResolveUserIdRequest) returns (ResolveUserIdResponse);

  //Tra cứu patient_id từ alias_id (UUID string)
  rpc ResolvePatientId (ResolvePatientIdRequest) returns (ResolvePatientIdResponse);

  //Tra cứu thông tin PII tổng hợp từ alias_id (UUID string)
  rpc ResolvePersonInfo (ResolvePersonInfoRequest) returns (ResolvePersonInfoResponse);
}

// =========================
// ======== MESSAGES =======
// =========================

// ----- Requests -----
message ResolveUserIdRequest {
  string alias_id = 1; //UUID string
}

message ResolvePatientIdRequest {
  string alias_id = 1; //UUID string
}

message ResolvePersonInfoRequest {
  string alias_id = 1; //UUID string
}

// ----- Responses -----
message ResolveUserIdResponse {
  string user_id = 1; //UUID string; empty nếu không tìm thấy
}

message ResolvePatientIdResponse {
  string patient_id = 1; //UUID string; empty nếu không tìm thấy
}

message ResolvePersonInfoResponse {
  string user_id = 1; //UUID string; empty nếu không tìm thấy
  string full_name = 2;
  UserGender gender = 3;
  google.protobuf.Timestamp birth_date = 4;
  ContactInfo contact_info = 5;
}

//----- Common/Nested -----
message ContactInfo {
  string email = 1;
  string phone_number = 2;
  string address = 3;
}

enum UserGender {
  NONE = 0;
  MALE = 1;
  FEMALE = 2;
  ELSE = 3;
}
